--- a/custom_components/polaris/manifest.json
+++ b/custom_components/polaris/manifest.json
@@ -8,8 +8,12 @@
   "iot_class": "local_push",
   "issue_tracker": "https://github.com/samoswall/polaris-mqtt/issues",
   "mqtt": [
-    "polaris/+/state/devtype",
-    "/polaris/+/state/devtype"
+    "polaris/+/state/mac",
+    "/polaris/+/state/mac",
+    "polaris/+/+/state/mac",
+    "/polaris/+/+/state/mac",
+    "rusclimate/+/+/state/mac",
+    "/rusclimate/+/+/state/mac"
   ],
-  "version": "1.0.8"
+  "version": "1.0.9"
   }
