--- a/.github/workflows/hassfest.yaml
+++ b/.github/workflows/hassfest.yaml
@@ -12,3 +12,5 @@ jobs:
     steps:
       - uses: "actions/checkout@v3"
       - uses: home-assistant/actions/hassfest@master
+        env:
+          HASSFEST_EXCLUDE: "custom_components/polaris/translations"
